# GUAP

./: .gitignore  README.md
AADSCourseProject/: readme.md
AlgorithmsAndDataStructures/: AlgorithmsAndDataStructures.sln
Assembler/: readme.md
BaseProgramming/: CMakeLists.txt  README.md
BaseProgramming/Variant/: CMakeLists.txt  variant.cpp
BaseProgramming/exam/: CMakeLists.txt  str.cpp  strconct.cpp
BaseProgramming/hello_world/: CMakeLists.txt  hello_world.cpp  main.cpp  print.cpp  print.h  string_change.cpp  string_change.h
BaseProgramming/lab_1/: CMakeLists.txt  mathExpression.cpp  test.cpp
BaseProgramming/lab_2/: CMakeLists.txt  squarePoint.cpp  test.cpp
BaseProgramming/lab_3/: CMakeLists.txt  sub-bit_operations.cpp  sub-bit_operations_2.cpp  test.cpp  test_2.cpp
BaseProgramming/lab_4/: CMakeLists.txt  mathPartExpression.cpp
BaseProgramming/lab_5/: CMakeLists.txt  arrayExpression.cpp
BaseProgramming/lab_6/: CMakeLists.txt  matrix.cpp
BaseProgramming/lab_7/: CMakeLists.txt  string.cpp  string_remove.cpp
BaseProgramming/lab_8/: CMakeLists.txt  chat_fstream.cpp  chat_stdio.cpp  io.cpp  io_fstream.cpp  io_stdio.cpp
ComputerGraphics/: .gitignore
ComputerModelling/: .gitignore  simple_deriviate.py
DatabaseDesign/: .gitignore
EMPPIS/: readme.md
FileDatabase/: FileDatabase.sln  readme.md
NeuralNetworks/: for_self_test.py  main.py  (+1 more)
OOP/part_2/lab_1/: CMakeLists.txt  main.cpp  mainwindow.h
OOP/part_2/lab_2/: CMakeLists.txt  mainwindow.h  repository.sqlite
OOP/part_2/lab_2/models/: book.cpp  book.h  reservation.cpp  reservation.h  user.h
OOP/part_2/lab_2/service/: repository.cpp  repository.h
OOP/part_2/lab_2/views/: content.cpp  content.h  current_user.cpp  current_user.h  root.cpp  root.h  table.cpp  table.h
(+615 files in other folders)
