project(get_started)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_BUILD_TYPE Debug)
cmake_minimum_required(VERSION 3.23)
add_subdirectory(hello_world)
add_subdirectory(lab_1)
add_subdirectory(lab_2)
add_subdirectory(lab_3)
add_subdirectory(lab_4)
add_subdirectory(lab_5)
add_subdirectory(exam)
add_subdirectory(Variant)